<resources>
    <string name="app_name">My Dictionary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="english_vietnamese">English - VIetnamese</string>
    <string name="vietnamese_english">Vietnamese - English</string>

    <string name="clear">CLEAR</string>
    <string name="clear_all">Clear all</string>
    <string name="hear">Phát âm</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="ap_wednesday">AP - Wednesday</string>
    <string name="dic">Dictionay VE and EV</string>
    <string name="settings">SETTINGS</string>
    <string name="remind">Remind</string>
    <string name="lang">Languages</string>
    <string name="network">NETWORK</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="select_language">Select language:</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
</resources>
