<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark"
            android:title="Bookmark" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_remind"
                android:icon="@drawable/ic_update"
                android:title="@string/remind" />
            <item
                android:id="@+id/nav_lang"
                android:icon="@drawable/ic_language"
                android:title="@string/lang" />
        </menu>
    </item>

    <item android:title="@string/network">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_thumb_up"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
