<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ev_white"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_ev"
                android:icon="@drawable/ev"
                android:orderInCategory="100"
                android:title="@string/english_vietnamese"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_ve"
                android:icon="@drawable/ve"
                android:orderInCategory="100"
                android:title="@string/vietnamese_english"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
